--- a/charts/microservice-chart/templates/secretproviderclass-kv.yaml
+++ b/charts/microservice-chart/templates/secretproviderclass-kv.yaml
@@ -12,9 +12,16 @@ spec:
     - secretName: {{ include "microservice-chart.fullname" $ }}
       type: Opaque
       data:
+      {{- if .Values.canaryDelivery.create }}
+      {{- range $key, $objectName := (mergeOverwrite .Values.envSecret .Values.canaryDelivery.envSecret) }}
+        - key: {{ $objectName }}
+          objectName: {{ $objectName }}
+      {{- end }}
+      {{- else }}
       {{- range $key, $objectName := .Values.envSecret }}
       - key: {{ $objectName }}
         objectName: {{ $objectName }}
+      {{- end }}
       {{- end }}
       {{- if .Values.providedVolumeMount.create }}
       {{- range $key, $objectName := .Values.providedVolumeMount.envSecret }}
@@ -31,11 +38,20 @@ spec:
     cloudName: ""
     objects: |
       array:
+        {{- if .Values.canaryDelivery.create }}
+        {{- range $key, $objectName := (mergeOverwrite .Values.envSecret .Values.canaryDelivery.envSecret) }}
+        - |
+          objectName: {{ $objectName }}
+          objectType: secret
+          objectVersion: ""
+        {{- end }}
+        {{- else }}
         {{- range $key, $objectName := .Values.envSecret }}
         - |
           objectName: {{ $objectName }}
           objectType: secret
           objectVersion: ""
+        {{- end }}
         {{- end }}
         {{- if .Values.providedVolumeMount.create }}
         {{- range $key, $objectName := .Values.providedVolumeMount.envSecret }}
