added persistent volumes in deploy

--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -70,13 +70,22 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
+            #<tmp folders>
             {{- if .Values.tmpVolumeMount.create }}
             {{- range $i, $val := .Values.tmpVolumeMount.mounts }}
-            #tmp folders
             - name: {{ $val.name }}
               mountPath: {{ $val.mountPath }}
             {{- end }}
             {{- end }}
+            #</tmp folder>
+            #<pvc mount>
+            {{- if .Values.persistentVolumeMounts.create }}
+            {{- range $i, $val := .Values.persistentVolumeMounts.mounts }}
+            - name: {{ $val.name }}
+              mountPath: {{ $val.mountPath }}
+            {{- end }}
+            {{- end }}
+            #</pvc mount>
             {{- if or .Values.secretProviderClass.create .Values.providedVolumeMount.create }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
@@ -152,12 +161,24 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       volumes:
+        #<tmp volume>
         {{- if .Values.tmpVolumeMount.create }}
         {{- range $i, $val := .Values.tmpVolumeMount.mounts }}
         - name: {{ $val.name }}
           emptyDir: {}
         {{- end }}
         {{- end }}
+        #</tmp volume>
+        #<pvc volume>
+        # {{- if .Values.persistentVolumeMounts.create }}
+        # {{- range $i, $val := .Values.persistentVolumeMounts.mounts }}
+        ciao: ciao
+        # - name: {{ $val.name }}
+        #   persistentVolumeClaim:
+        #     claimName: {{ $val.pvcName }}
+        # {{- end }}
+        # {{- end }}
+        #</pvc volume>
         {{- if .Values.providedVolumeMount.create }}
         {{- range $i, $v := .Values.providedVolumeMount.folders }}
         - name: file-azure-{{ $v.name }}
