--- a/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
+++ b/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
@@ -116,7 +116,7 @@ microservice-chart:
           targetValue: "30"
 
   keyvault:
-    name: "dvopla-d-diego-kv"
+    name: "dvopla-d-blueprint-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   # nodeSelector: {}
