--- a/test/v5-java-helm-complete-test/helm/values-devopslab-dev.yaml
+++ b/test/v5-java-helm-complete-test/helm/values-devopslab-dev.yaml
@@ -51,7 +51,7 @@ microservice-chart:
         mountPath: /app/logs
 
   persistentVolumeMounts:
-    created: true
+    create: true
     mounts:
       - name: pdf-pvc
         mountPath: /pdf
