--- a/tests/v2-java-helm-complete-test/helm/Chart.yaml
+++ b/tests/v2-java-helm-complete-test/helm/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: 1.0.0
 dependencies:
 - name: microservice-chart
   version: 2.8.0
-  repository: https://pagopa.github.io/aks-microservice-chart-blueprint
+  repository: file://../../../charts/microservice-chart
