--- a/tests/v2-java-helm-complete-test/helm/templates/configmaps.yaml
+++ b/tests/v2-java-helm-complete-test/helm/templates/configmaps.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: v2-confimap-games
-  namespace: diego
+  name: v2-complete-configmap-games
+  namespace: blueprint
 data:
   # property-like keys; each key maps to a simple value
   player-initial-lives: "3"
@@ -22,8 +22,8 @@ data:
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: v2-confimap-mongodb
-  namespace: diego
+  name: v2-complete-configmap-mongodb
+  namespace: blueprint
 data:
   # Configuration values can be set as key-value properties
   database: mongodb
