--- a/tests/v2-java-helm-complete-test/helm/values-devopslab-dev.yaml
+++ b/tests/v2-java-helm-complete-test/helm/values-devopslab-dev.yaml
@@ -40,28 +40,29 @@ microservice-chart:
   fileConfigExternals:
     create: true
     configMaps:
-      - name: v2-confimap-games
+      - name: v2-complete-configmap-games
         key: game.properties
-      - name: v2-confimap-games
+      - name: v2-complete-configmap-games
         key: user-interface.properties
-      - name: v2-confimap-mongodb
+      - name: v2-complete-configmap-mongodb
         key: keys
 
   fileConfig:
     internal.properties: |
-      enemy.types=aliens,monsters
-      player.maximum-lives=5
+      game.types=rock,scissors,paper
+      player.max=2
+    internal-user.properties: |
+      id.types=name,surname,age
+      secret.types=magic
 
   envConfigMapExternals:
-    v2-confimap-games:
+    v2-complete-configmap-games:
       PLAYER_INITIAL_LIVES_ENV: player-initial-lives
       UI_PROPERTIES_FILE_NAME_ENV: ui-properties-file-name
 
-    v2-confimap-mongodb:
+    v2-complete-configmap-mongodb:
       DATABASE: database
       DATABASE_URI: database-uri
-
-
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
@@ -93,7 +94,7 @@ microservice-chart:
   ingress:
     create: false
     host: ""
-    path: /diego/color(/|$)(.*)
+    path: /diego/v2-test-complete(/|$)(.*)
     rewriteTarget: /$2
     servicePort: 8080
 
@@ -120,24 +121,16 @@ microservice-chart:
       cpu: "300m"
 
   autoscaling:
-    enable: false
+    enable: true
     minReplica: 1
-    maxReplica: 2
+    maxReplica: 3
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
-      - type: azure-monitor
+      - type: cpu
         metadata:
-          tenantId: 7788edaf-0346-4068-9d79-c868aed15b3d
-          subscriptionId: ac17914c-79bf-48fa-831e-1359ef74c1d5
-          resourceGroupName: dvopla-d-sec-rg
-          resourceURI: Microsoft.KeyVault/vaults/dvopla-d-neu-kv
-          metricName: ServiceApiHit
-          # metricNamespace: Microsoft.KeyVault/vaults
-          # metricFilter: namespace eq 'default'
-          # metricAggregationInterval: "-1:1:0"
-          metricAggregationType: Count
-          targetValue: "30"
+          type: Utilization
+          value: "60"
 
   keyvault:
     name: "dvopla-d-blueprint-kv"
