added tmp folder variables

--- a/charts/microservice-chart/values.yaml
+++ b/charts/microservice-chart/values.yaml
@@ -310,3 +310,7 @@ podDisruptionBudget:
   minAvailable: 0
   # -- (mutually exclusive with minAvailable) Max number of pods unavailable before destroy node
   maxUnavailable: ""
+
+tmpFolder:
+  name: tmp
+  mountPath: /tmp
