--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -70,8 +70,8 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-            - name: tmp
-              mountPath: /tmp
+            - name: {{ .Values.tmpFolder.name }}
+              mountPath: {{ .Values.tmpFolder.mountPath }}
             {{- if or .Values.envSecret .Values.fileShare.create }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
@@ -137,7 +137,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       volumes:
-        - name: tmp
+        - name: {{ .Values.tmpFolder.name }}
           emptyDir: {}
         {{- if .Values.fileShare.create }}
         {{- range $k, $v := .Values.fileShare.folders }}
