--- a/tests/v2-java-helm-base-test/helm/values-devopslab-dev.yaml
+++ b/tests/v2-java-helm-base-test/helm/values-devopslab-dev.yaml
@@ -75,6 +75,15 @@ microservice-chart:
     name: "dvopla-d-blueprint-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
+  podDisruptionBudget:
+    create: true
+    minAvailable: 0
+
+  tmpFolder:
+    name: log
+    mountPath: /app/logs
+
+
   # nodeSelector: {}
 
   # tolerations: []
