--- a/charts/microservice-chart/templates/deployments.yaml
+++ b/charts/microservice-chart/templates/deployments.yaml
@@ -70,8 +70,8 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-            - name: tmp
-              mountPath: /tmp
+            - name: {{ .Values.tmpFolder.name }}
+              mountPath: {{ .Values.tmpFolder.mountPath }}
             {{- if or .Values.envSecret .Values.fileShare.create }}
             - name: secrets-store-inline
               mountPath: "/mnt/secrets-store"
@@ -87,7 +87,7 @@ spec:
             {{- end }}
             {{- if .Values.fileConfigExternals.create }}
             {{- range $k, $v := .Values.fileConfigExternals.configMaps }}
-            - name: file-config-external-{{ $v.name }}
+            - name: file-config-external-{{ $v.key | sha1sum | trunc 5 }}
               mountPath: "/mnt/file-config-external/{{ $v.name }}/{{ $v.key }}"
               subPath: {{ $v.key }}
               readOnly: true
@@ -137,7 +137,7 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       volumes:
-        - name: tmp
+        - name: {{ .Values.tmpFolder.name }}
           emptyDir: {}
         {{- if .Values.fileShare.create }}
         {{- range $k, $v := .Values.fileShare.folders }}
@@ -172,7 +172,7 @@ spec:
         {{- end }}
         {{- if .Values.fileConfigExternals.create }}
         {{- range $k, $v := .Values.fileConfigExternals.configMaps }}
-        - name: file-config-external-{{ $v.name }}
+        - name: file-config-external-{{ $v.key | sha1sum | trunc 5 }}
           configMap:
             name: {{ $v.name }}
             defaultMode: 420
