--- a/tests/v5-java-helm-basic-test/helm/templates/external-configmaps.yaml
+++ b/tests/v5-java-helm-basic-test/helm/templates/external-configmaps.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: external-configmap-files-basic
+  name: v5-basic-external-configmap
+  namespace: "blueprint"
 data:
   # property-like keys; each key maps to a simple value
   player_initial_lives: "3"
@@ -22,7 +23,8 @@ data:
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: external-configmap-values-basic
+  name: v5-basic-external-configmap-values
+  namespace: "blueprint"
 data:
   # Configuration values can be set as key-value properties
   database: mongodb
