--- a/tests/v5-java-helm-complete-test/helm/templates/external-configmaps.yaml
+++ b/tests/v5-java-helm-complete-test/helm/templates/external-configmaps.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: external-configmap-files-complete
+  name: v5-complete-configmap-files
+  namespace: "blueprint"
 data:
   # file-like keys
   game.properties: |
@@ -18,7 +19,8 @@ data:
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: external-configmap-values-complete-1
+  name: v5-complete-external-configmap-values-1
+  namespace: "blueprint"
 data:
   # Configuration values can be set as key-value properties
   database-db-name: mongodb
@@ -28,7 +30,8 @@ data:
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: external-configmap-values-complete-2
+  name: v5-complete-external-configmap-values-2
+  namespace: "blueprint"
 data:
   # property-like keys; each key maps to a simple value
   player-initial-lives: "3"
