fix tests ingress

--- a/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
+++ b/examples/spring-boot-app-bar-latest/helm/values-devopslab-dev.yaml
@@ -69,7 +69,7 @@ microservice-chart:
   ingress:
     create: false
     host: ""
-    path: /diego/color(/|$)(.*)
+    path: /blueprint/color(/|$)(.*)
     rewriteTarget: /$2
     servicePort: 8080
 
