--- a/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-basic-test/helm/values-devopslab-dev.yaml
@@ -49,8 +49,8 @@ microservice-chart:
 
   ingress:
     create: true
-    host: dev01.diego.internal.devopslab.pagopa.it
-    path: /diego/v5-java-helm-basic-test(/|$)(.*)
+    host: dev01.blueprint.internal.devopslab.pagopa.it
+    path: /blueprint/v5-java-helm-basic-test(/|$)(.*)
     rewriteTarget: /$2
     servicePort: 8080
 
