--- a/tests/v5-java-helm-complete-test/helm/values-devopslab-dev.yaml
+++ b/tests/v5-java-helm-complete-test/helm/values-devopslab-dev.yaml
@@ -39,7 +39,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/devops-java-springboot-color
-    tag: beta-fix-logs-folders
+    tag: 0.10.0
     pullPolicy: Always
 
   tmpVolumeMount:
